tests/baselines/reference/derivedTypeAccessesHiddenBaseCallViaSuperPropertyAccess.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/derivedTypeAccessesHiddenBaseCallViaSuperPropertyAccess.ts(14,36): error TS2339: Property 'b' does not exist on type '{ a: number; }'.


==== tests/cases/conformance/classes/propertyMemberDeclarations/memberFunctionDeclarations/derivedTypeAccessesHiddenBaseCallViaSuperPropertyAccess.ts (1 errors) ====
    class Base {
        foo(x: { a: number }): { a: number } {
            return null;
        }
    }
    
    class Derived extends Base {
        foo(x: { a: number; b: number }): { a: number; b: number } {
            return null;
        }
    
        bar() {
            var r = super.foo({ a: 1 }); // { a: number }
            var r2 = super.foo({ a: 1, b: 2 }); // { a: number }
                                       ~
!!! error TS2339: Property 'b' does not exist on type '{ a: number; }'.
            var r3 = this.foo({ a: 1, b: 2 }); // { a: number; b: number; }
        }
    }